Add two pages and photos

--- a/index.html
+++ b/index.html
@@ -17,14 +17,36 @@
     </div>
     <nav>
       <ul>
-        <li>Teachers</li>
-        <li>Students</li>
-        <li>Courses</li>
+        <li><a href="index.html">Teachers</a></li>
+        <li><a href="students.html">Students</a></li>
+        <li><a href="courses.html">Courses</a></li>
       </ul>
     </nav>
   </header>
 
   <section>
+
+        <box>
+          <div class="teacher">
+            <div class="teacher-image">
+              <img src="images/dumbledore.jpg">
+            </div>
+            <div class="teacher-content">
+              <h1>Albus Dumbledore</h1>
+              <h2>Headmaster</h2>
+            </div>
+          </div>
+          <div class="second-row">
+            <div class="course">
+              <h2>Courses</h2>
+              <h3>All</h3>
+            </div>
+            <div class="rating">
+              <h2>Rating</h2>
+              <h3>4.9/5.0</h3>
+            </div>
+          </div>
+        </box>
     <box>
       <div class="teacher">
         <div class="teacher-image">
@@ -97,29 +119,7 @@
           <img src="images/snap.jpg">
         </div>
         <div class="teacher-content">
-          <h1>Professor Snap</h1>
-          <h2>Potions</h2>
-        </div>
-      </div>
-      <div class="second-row">
-        <div class="course">
-          <h2>Courses</h2>
-          <h3>Magical Potions</h3>
-        </div>
-        <div class="rating">
-          <h2>Rating</h2>
-          <h3>4.9/5.0</h3>
-        </div>
-      </div>
-    </box>
-
-    <box>
-      <div class="teacher">
-        <div class="teacher-image">
-          <img src="images/snap.jpg">
-        </div>
-        <div class="teacher-content">
-          <h1>Professor Snap</h1>
+          <h1>Professor Slughorn</h1>
           <h2>Potions</h2>
         </div>
       </div>
