Update design and flexbox styles

--- a/index.html
+++ b/index.html
@@ -12,20 +12,21 @@
 <body>
 
   <header>
-    <div class="title">
-      <h1>Hogwart's School of Witchcraft and Wizardry</h1>
+    <div class="container">
+      <div class="title">
+        <h1>Hogwart's School of Witchcraft and Wizardry</h1>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="index.html">Teachers</a></li>
+          <li><a href="students.html">Students</a></li>
+          <li><a href="courses.html">Courses</a></li>
+        </ul>
+      </nav>
     </div>
-    <nav>
-      <ul>
-        <li><a href="index.html">Teachers</a></li>
-        <li><a href="students.html">Students</a></li>
-        <li><a href="courses.html">Courses</a></li>
-      </ul>
-    </nav>
   </header>
 
   <section>
-
         <box>
           <div class="teacher">
             <div class="teacher-image">
