--- a/students.html
+++ b/students.html
@@ -10,20 +10,22 @@
 </head>
 
 <body>
-
   <header>
-    <div class="title">
-      <h1>Hogwart's School of Witchcraft and Wizardry</h1>
+    <div class="container">
+      <div class="title">
+        <h1>Hogwart's School of Witchcraft and Wizardry</h1>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="index.html">Teachers</a></li>
+          <li><a href="students.html">Students</a></li>
+          <li><a href="courses.html">Courses</a></li>
+        </ul>
+      </nav>
     </div>
-    <nav>
-      <ul>
-        <li><a href="index.html">Teachers</a></li>
-        <li><a href="students.html">Students</a></li>
-        <li><a href="courses.html">Courses</a></li>
-      </ul>
-    </nav>
   </header>
 
+  <div class="container">
   <section>
     <box>
       <div class="student">
@@ -34,13 +36,16 @@
           <h1>Harry Potter</h1>
           <h2>Defense Against the Dark Arts</h2>
         </div>
+      </div>
+      <div class="second-row left-align">
+        <div class="student-info">
+          <div class="info-label">Email:</div>
+          <div class="info">harry@hogwarts.com</div>
+          <div class="info-label">GPA:</div>
+          <div class="info">3.5</div>
+          <div class="info-label">Courses:</div>
+          <div clas="info">Defense 101</div>
         </div>
-        <div class="second-row">
-          <div class="student-info">
-            <h2 class="right-justified">Email</h2><h2>harry@hogwarts.com</h2>
-            <h2 class="right-justified">GPA</h2><h2>3.4</h2>
-            <h2>Courses</h2><h2>Defense 101</h2>
-          </div>
       </div>
     </box>
 
@@ -53,13 +58,16 @@
             <h1>Ron Wessley</h1>
             <h2>Defense Against the Dark Arts</h2>
           </div>
-          </div>
-          <div class="second-row">
-            <div class="student-info">
-              <h2 class="right-justified">Email</h2><h2>ron@hogwarts.com</h2>
-              <h2 class="right-justified">GPA</h2><h2>3.4</h2>
-              <h2>Courses</h2><h2>Defense 101</h2>
-            </div>
+        </div>
+        <div class="second-row left-align">
+          <div class="student-info">
+          <div class="info-label">Email:</div>
+          <div class="info">ron@hogwarts.com</div>
+          <div class="info-label">GPA:</div>
+          <div class="info">2.8</div>
+          <div class="info-label">Courses:</div>
+          <div clas="info">Defense 101</div>
+        </div>
         </div>
       </box>
 
@@ -73,18 +81,20 @@
             <h2>Defense Against the Dark Arts</h2>
           </div>
           </div>
-          <div class="second-row">
+          <div class="second-row left-align">
             <div class="student-info">
-              <h2 class="right-justified">Email</h2><h2>hermoine@hogwarts.com</h2>
-              <h2 class="right-justified">GPA</h2><h2>3.4</h2>
-              <h2>Courses</h2><h2>Defense 101</h2>
+              <div class="info-label">Email:</div>
+              <div class="info">hermione@hogwarts.com</div>
+              <div class="info-label">GPA:</div>
+              <div class="info">4.0</div>
+              <div class="info-label">Courses:</div>
+              <div clas="info">Defense 101</div>
             </div>
-        </div>
+          </div>
       </box>
 
   </section>
-
-
+</div>
 
 
 </body>
