Add javascript file with first lesson

--- a/courses.html
+++ b/courses.html
@@ -7,6 +7,7 @@
   <meta teacher="description" content="Hogwarts">
   <meta teacher="author" content="Kali Rogers">
   <link rel="stylesheet" href="css/styles.css">
+  <script src="js/main.js"></script>
 </head>
 
 <body>
