--- a/courses.html
+++ b/courses.html
@@ -7,6 +7,7 @@
   <meta teacher="description" content="Hogwarts">
   <meta teacher="author" content="Kali Rogers">
   <link rel="stylesheet" href="css/styles.css">
+  <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>
   <script src="js/main.js"></script>
 </head>
 
@@ -27,7 +28,24 @@
     </div>
   </header>
 
-  <section>
+  <section id="course-filter">
+    <h2>Filters</h2>
+    <select class="department-drop">
+      <option value="Astronomy">Astronomy</option>
+      <option value="Charms">Charms</option>
+      <option value="Dark Arts">Dark Arts</option>
+      <option value="Herbology">Herbology</option>
+      <option value="Potions">Potions</option>
+      <option value="Transfiguration">Transfiguration</option>
+    </select>
+    <select class="semester-drop">
+      <option value="semester one">Semester One</option>
+      <option value="semester two">Semester Two</option>
+    </select>
+    <button type="button" id="filter-button">Filter</button>
+  </section>
+
+  <section id="courses">
     <box class="courses">
       <div class="course-name">
         <h2>Potions</h2>
