--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
   <meta teacher="description" content="Hogwarts">
   <meta teacher="author" content="Kali Rogers">
   <link rel="stylesheet" href="css/styles.css">
+  <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>
   <script src="js/main.js"></script>
-</head>
 
+</head>
 <body>
 
   <header>
@@ -51,7 +52,7 @@
         </box>
     <box>
       <div class="teacher">
-        <div class="teacher-image">
+        <div id="test" class="teacher-image">
           <img src="images/hagrid.jpg">
         </div>
         <div class="teacher-content">
@@ -137,9 +138,5 @@
       </div>
     </box>
   </section>
-
-
-
-
 </body>
 </html>
