added images of teachers and worked on updating average on teacher page

--- a/courses.html
+++ b/courses.html
@@ -39,14 +39,14 @@
       <option value="Transfiguration">Transfiguration</option>
     </select>
     <select class="semester-drop">
-      <option value="semester one">Semester One</option>
-      <option value="semester two">Semester Two</option>
+      <option value="one">Semester One</option>
+      <option value="two">Semester Two</option>
     </select>
     <button type="button" id="filter-button">Filter</button>
   </section>
 
   <section id="courses">
-    <box class="courses">
+    <!----<box class="courses">
       <div class="course-name">
         <h2>Potions</h2>
         <h2>Potions</h2>
@@ -95,7 +95,7 @@
         <p>teacher: snap</p>
         <p>semester: 1</p>
       </div>
-    </box>
+    </box>-->
 
   </section>
 
