--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
       </nav>
     </div>
   </header>
-
-  <section>
-        <box>
+  <section id="newRating">
+  </section>
+  <section id="teachers">
+        <!--<box>
           <div class="teacher">
             <div class="teacher-image">
               <img src="images/dumbledore.jpg">
@@ -136,7 +137,7 @@
           <h3>4.9/5.0</h3>
         </div>
       </div>
-    </box>
+    </box>-->
   </section>
 </body>
 </html>
